--- a/style.css
+++ b/style.css
@@ -8,11 +8,13 @@ body {
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
   grid-gap: 40px;
-  
+  width: 75%;
+  margin: 20% auto;
 }
 
 .card-one, .card-two, .card-three {
   border: 1px grey solid;
+  border-radius: 6px;
 }
 
 .card-one, .card-two, .card-three {
@@ -30,16 +32,12 @@ body {
   width: 25%;
 }
 
-.card-one h2 {
+.card-one h2, .card-two h2, .card-three h2 {
   grid-column: 2 / 3;
 }
 
-.card-one p {
+.card-one p, .card-two p, .card-three p {
   grid-column: 2 / 3;
-}
-
-.bottom {
-  display: flex;
 }
 
 .card-two {
@@ -50,3 +48,18 @@ body {
   grid-column: 3 / 4;
 }
 
+.bottom {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+  width: 100%;
+}
+
+.bottom p:first-child {
+  grid-column: 1 / 2;
+  width: 100%
+}
+
+.bottom p:nth-child(2) {
+  grid-column: 3 / 4;
+}
