--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .cards {
@@ -13,13 +14,14 @@ body {
 }
 
 .card-one, .card-two, .card-three {
-  border: 1px grey solid;
+  border: 1px solid #757575;
   border-radius: 6px;
+  box-shadow: 5px 5px 5px #B5B5B5;
 }
 
 .card-one, .card-two, .card-three {
   display: grid;
-  grid-template-columns: 1fr, 1fr;
+  grid-template-columns: 35% 65%;
   grid-template-rows: 1fr 1fr;
   grid-gap: 0;
   grid-column: 1 / 2;
@@ -28,12 +30,14 @@ body {
 .card-one img, .card-two img, .card-three img {
   grid-column: 1 / 2;
   grid-row: 1 / 3;
-  margin-left: 25%;
-  width: 25%;
+  margin-left: 10%;
+  margin-top: 20%;
+  width: 75%;
 }
 
 .card-one h2, .card-two h2, .card-three h2 {
   grid-column: 2 / 3;
+  width: 100%;
 }
 
 .card-one p, .card-two p, .card-three p {
@@ -48,18 +52,18 @@ body {
   grid-column: 3 / 4;
 }
 
+.bottom-row {
+  grid-column: 1 / 3;
+}
+
 .bottom {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
-  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin: auto;
 }
 
-.bottom p:first-child {
-  grid-column: 1 / 2;
-  width: 100%
-}
-
-.bottom p:nth-child(2) {
-  grid-column: 3 / 4;
+.card-one:hover, .card-two:hover, .card-three:hover {
+  background-color: #DBDBDB;
+  cursor: pointer;
 }
